--- a/index.html
+++ b/index.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Game Developer Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 
 <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
-    <p>I'm hosted with GitHub Pages.</p>
+    <div id="game-container">
+        <section id="level-intro" class="game-level">
+            <h1>Welcome to My Game Dev Portfolio</h1>
+            <!-- Introduction content -->
+        </section>
+        <section id="level-about" class="game-level">
+            <h2>About the Developer</h2>
+            <!-- About content -->
+        </section>
+        <section id="level-projects" class="game-level">
+            <h2>My Projects</h2>
+            <!-- Projects content -->
+        </section>
+        <section id="level-contact" class="game-level">
+            <h2>Get in Touch</h2>
+            <!-- Contact content -->
+        </section>
+    </div>
+    <script src="app.js"></script>
 </body>
 
 </html>
