--- a/index.html
+++ b/index.html
@@ -4,28 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Game Developer Portfolio</title>
+    <title>Space Adventure</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div id="game-container">
-        <section id="level-intro" class="game-level">
-            <h1>Welcome to My Game Dev Portfolio</h1>
-            <!-- Introduction content -->
-        </section>
-        <section id="level-about" class="game-level">
-            <h2>About the Developer</h2>
-            <!-- About content -->
-        </section>
-        <section id="level-projects" class="game-level">
-            <h2>My Projects</h2>
-            <!-- Projects content -->
-        </section>
-        <section id="level-contact" class="game-level">
-            <h2>Get in Touch</h2>
-            <!-- Contact content -->
-        </section>
+    <div id="space-background">
+        <img src="images/spaceship.png" id="spaceship" alt="Spaceship">
+        <!-- Your content goes here -->
     </div>
     <script src="app.js"></script>
 </body>
