--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="space-background">
-        <img src="images/spaceship.png" id="spaceship" alt="Spaceship">
+        <img src="/images/spaceship.png" id="spaceship" alt="Spaceship">
         <!-- Your content goes here -->
     </div>
     <script src="app.js"></script>
