--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
+<!-- Add a canvas element -->
+<canvas id="spaceCanvas"></canvas>
+
 <body>
     <div id="space-background">
-        <img src="/images/spaceship.png" id="spaceship" alt="Spaceship">
+        <img src="images/spaceship.png" id="spaceship" alt="Spaceship">
         <!-- Your content goes here -->
     </div>
     <script src="app.js"></script>
