--- a/index.html
+++ b/index.html
@@ -8,13 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-
-
 <body>
-    <div id="space-background">
-        <!-- Add a canvas element -->
-        <canvas id="spaceCanvas"></canvas>
-    </div>
+    <img src="images/spaceship.png" id="spaceship" alt="Spaceship" style="position: absolute;">
     <script src="app.js"></script>
 </body>
 
