--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
 
         <section id="about" class="section">
             <h1>About Me</h1>
-            <p>Even though I've always had clear that I wanted to be a developer, a few times I've drifted to other areas not that far
-            away from my goal. With that said, I've also never left my learning journey, and those drifts have always being to
-            expand my knowledge and skills. I believed there is not a single thing that can be considered a useless experience.</p>
+            <p>About me text.</p>
         </section>
 
         <section id="projects" class="section">
