circuit like rectangle

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
             <h1>Kevin Rivera</h1>
             <p>"An expert is a man who has made all the mistakes that can be made in a very narrow field"</p>
             <p>Tech Stack: [placeholder]</p>
+            <div id="circuitContainer" class="circuit-container">
+                <svg id="circuit" class="circuit"></svg>
+                <div id="centralText" class="central-text">Central Text</div>
+            </div>
         </section>
 
         <section id="about" class="section">
