resume and mobile view fixed

--- a/index.html
+++ b/index.html
@@ -32,14 +32,15 @@
             </span></h3>
                 <p>Dedicated to crafting engaging and immersive experiences. Join me as I level up my skills and dive into the wolrd of game development, fueled with passion and a relentless pursuit of achivement and self-improvement.</p> 
             <div class="social-icons">
-                <a href="#"><i class='bx bxl-linkedin'></i></a>
-                <a href="#"><i class='bx bxl-github'></i></a>
-                <a href="#"><i class="fa-brands fa-itch-io"></i></a>
-                <a href="#"><i class='bx bx-briefcase-alt'></i></a>
+                <a href="https://www.linkedin.com/in/kevin-rivera-ch/" target="_blank"><i class='bx bxl-linkedin'></i></a>
+                <a href="cheztburster.itch.io" target="_blank"><i class="fa-brands fa-itch-io"></i></a>
+                <a href="https://github.com/ChezterBurster" target="_blank"><i class='bx bxl-github'></i></a>
+                <a href="#" id="copy-email"><i class='bx bx-envelope'></i>
+                <span class="tooltip-text" id="tooltip-text">Copy Email to Clipboard</span></a>
             </div>
 
             <div class="btn-group">
-                <a href="#" class="btn">Hire</a>
+                <a href="\files\Kevin_Rivera_H_resume.pdf" class="btn">Resume</a>
                 <a href="#contact" class="btn">Contact</a>
             </div>
 
@@ -138,7 +139,6 @@
                 <input type="radio" name="slide" id="c1" checked>
                 <label for="c1" class="card">
                     <div class="row">
-                        <div class="icon">1</div>
                         <div class="description">
                             <h4>Z.L.A.P.</h4>
                             <p>Game made for the GlobalGameJam 2024</p>
@@ -148,7 +148,6 @@
                 <input type="radio" name="slide" id="c2">
                 <label for="c2" class="card">
                     <div class="row">
-                        <div class="icon">2</div>
                         <div class="description">
                             <h4>Working Around</h4>
                             <p>The first game I made for a GameJam in the summer of 2020. It was reviseted and improved a
@@ -159,7 +158,6 @@
                 <input type="radio" name="slide" id="c3">
                 <label for="c3" class="card">
                     <div class="row">
-                        <div class="icon">3</div>
                         <div class="description">
                             <h4>My Peterinary</h4>
                             <p>This is a game I worked on as a Sound Designer during my internship.</p>
@@ -169,7 +167,6 @@
                 <input type="radio" name="slide" id="c4">
                 <label for="c4" class="card">
                     <div class="row">
-                        <div class="icon">4</div>
                         <div class="description">
                             <h4>PixForce</h4>
                             <p>A small game made as a school project.</p>
