--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <p>Dedicated to crafting engaging and immersive experiences. Join me as I level up my skills and dive into the wolrd of game development, fueled with passion and a relentless pursuit of achivement and self-improvement.</p> 
             <div class="social-icons">
                 <a href="https://www.linkedin.com/in/kevin-rivera-ch/" target="_blank"><i class='bx bxl-linkedin'></i></a>
-                <a href="cheztburster.itch.io" target="_blank"><i class="fa-brands fa-itch-io"></i></a>
+                <a href="https://cheztburster.itch.io/" target="_blank"><i class="fa-brands fa-itch-io"></i></a>
                 <a href="https://github.com/ChezterBurster" target="_blank"><i class='bx bxl-github'></i></a>
                 <a href="#" id="copy-email"><i class='bx bx-envelope'></i>
                 <span class="tooltip-text" id="tooltip-text">Copy Email to Clipboard</span></a>
