Fixed second link to itch

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <footer class="footer">
         <div class="social">
             <a href="https://www.linkedin.com/in/kevin-rivera-ch/" target="_blank"><i class='bx bxl-linkedin'></i></a>
-            <a href="cheztburster.itch.io" target="_blank"><i class="fa-brands fa-itch-io"></i></a>
+            <a href="https://cheztburster.itch.io/" target="_blank"><i class="fa-brands fa-itch-io"></i></a>
             <a href="https://github.com/ChezterBurster" target="_blank"><i class='bx bxl-github'></i></a>
             <a href="#" id="copy-email-footer"><i class='bx bx-envelope'></i>
             <span class="tooltip-text-footer" id="tooltip-text-footer">Copy Email to Clipboard</span></a></div>
