--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         </div>
         <div class="home-img">
-            <img src="images\spaceship.png" alt="">
+            <img src="images\profile-image.png" alt="">
         </div>
     </section>
 
