--- a/index.html
+++ b/index.html
@@ -140,7 +140,9 @@
                 <label for="c1" class="card">
                     <div class="row">
                         <div class="description">
-                            <h4>Z.L.A.P.</h4>
+                            <a href="https://globalgamejam.org/games/2024/zlap-zuper-liga-atomica-de-papeadas-2" target="_blank">
+                                <h4>Z.L.A.P.</h4>
+                            </a>
                             <p>Game made for the GlobalGameJam 2024</p>
                         </div>
                     </div>
@@ -149,7 +151,9 @@
                 <label for="c2" class="card">
                     <div class="row">
                         <div class="description">
-                            <h4>Working Around</h4>
+                            <a href="https://cheztburster.itch.io/working-around" target="_blank">                            
+                                <h4>Working Around</h4>
+                            </a>
                             <p>The first game I made for a GameJam in the summer of 2020. It was reviseted and improved a
                                 year later</p>
                         </div>
@@ -159,7 +163,9 @@
                 <label for="c3" class="card">
                     <div class="row">
                         <div class="description">
-                            <h4>My Peterinary</h4>
+                            <a href="https://play.google.com/store/apps/details?id=com.hyperbeard.mypeterinary&hl=en_US" target="_blank">
+                                <h4>My Peterinary</h4>
+                            </a>
                             <p>This is a game I worked on as a Sound Designer during my internship.</p>
                         </div>
                     </div>
@@ -167,8 +173,10 @@
                 <input type="radio" name="slide" id="c4">
                 <label for="c4" class="card">
                     <div class="row">
-                        <div class="description">
-                            <h4>PixForce</h4>
+                        <div class="description" >
+                            <a href="https://cheztburster.itch.io/pixforce" target="_blank">                            
+                                <h4>PixForce</h4>
+                            </a>
                             <p>A small game made as a school project.</p>
                         </div>
                     </div>
